# cpphttp

./: .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md  SPEC.md  fileserver.cpp  fileserver.h  http.cpp  http.h  plan.md  websockets.md
example/: main.cpp
src/platform/: socket.h  socket_common.cpp  socket_linux.cpp  socket_windows.cpp
tests/: test_fileserver.cpp  test_helpers.h  test_http.cpp
